--- a/css/main.css
+++ b/css/main.css
@@ -418,6 +418,7 @@ padding: 4px 13px 6px;
 text-transform: uppercase;
 font-weight: bold;
 margin-left: 150px;
+text-decoration: none;
 }
 /*End Contact Us*/
 /*Start Footer*/
